fix: proposal feedback (#582)
* fix(proposal-detail): switching network crashed app

* feat(markdown): headers should not have underline

* fix(proposal-table): incorrect widths

* fix(proposal-table): use mock data and fix token symbol

* fix(proposal): vote buttons should be equal size

* fix(vote): footer text too small

* fix(vote): font color needs to be grey

* fix(vote): center footer text

* feat(markdown-viewer): handle links properly
Correct styling
Link to _blank

* fix(vote): round bar percentage labels

* fix(vote): match history to Snapshot
Remove amount label, append token symbol to power

* feat(proposal): hide vote bar when no votes

* feat(vote): more accurate "vote in progress" text in footer

* feat(proposals): right align loading spinners

* feat(proposals): filter older proposals for prototype

* feat(proposals): adjust attributes to match Snapshot

* fix(proposals): more graceful handling of undefined USD amount

* feat(daos): hide non-prototype DAOs

* fix(generic-table): hide toggle buttons when no search bar

* fix(proposals): incorrect top margin

--- a/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/VoteHistories/VoteHistories.module.scss
+++ b/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/VoteHistories/VoteHistories.module.scss
@@ -1,5 +1,13 @@
 @use 'styles/variables/dimensions';
 
+/*
+ * NOTE: had to lift this out of .Container because
+ * it wasn't applying for some reason
+ */
+.Direction span {
+	font-weight: 700 !important;
+}
+
 .Container {
 	margin: 16px 0;
 	padding: 16px 0;
@@ -66,10 +74,6 @@
 					&.Address {
 						flex: 1 1;
 						justify-content: flex-start;
-					}
-
-					&.Direction {
-						justify-content: center;
 					}
 				}
 
