--- a/src/containers/DAO/pages/DAOPage/Proposals/PropsalsTable/ProposalsTable.module.scss
+++ b/src/containers/DAO/pages/DAOPage/Proposals/PropsalsTable/ProposalsTable.module.scss
@@ -1,5 +1,5 @@
 .Container {
-	margin-top: 24px !important;
+	margin-top: 9px !important;
 
 	table {
 		margin: 16px 0;
